--- a/currency-conversion-service/application-test.properties
+++ b/currency-conversion-service/application-test.properties
@@ -16,4 +16,4 @@ spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 # message
-app.message=Message for Test Profile from application.properties
+app.message=Message for Test Profile updated
